--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -648,6 +648,7 @@ body.login-page {
 }
 
 .neu-section {
+    text-align: justify;
     background: #e0e5ec;
     border-radius: 20px;
     padding: 25px 30px;
@@ -932,6 +933,11 @@ main {
   font-size: 15px;
 }
 
+.edu-card {
+  text-align: justify;
+}
+
+
 /* ============================= */
 /* Formulario de contacto */
 /* ============================= */
@@ -1009,4 +1015,29 @@ main {
 /* Asegura espacio suficiente para el texto */
 .neu-input input {
   padding-left: 50px;
+}
+
+.badge-unread {
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #5a8dee;
+  color: white;
+  font-size: 0.65rem;
+  padding: 4px 6px;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(90, 141, 238, 0.3);
+}
+
+.patient-item {
+  position: relative;
+}
+
+.msg-time {
+  display: block;
+  font-size: 0.7rem;
+  opacity: 0.7;
+  text-align: right;
+  margin-top: 4px;
 }
